--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "next": "^15.5.2",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
