--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "^15.5.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "serverless-http": "^3.2.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
